force-app/main/default/objects/ssot__LeadEngagement__dlm/fields/ssot__LeadDisqualificationReason__c.field-meta.xml
<CustomField>
    <fullName>ssot__LeadDisqualificationReason__c</fullName>
    <label>Lead Disqualification Reason</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LeadDisqualificationReason</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>