force-app/main/default/objects/ssot__LeadEngagement__dlm/fields/ssot__LeadEngagement_UtmId_map_Campaign_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__LeadEngagement_UtmId_map_Campaign_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LeadEngagement_UtmId_map_Campaign_Id_N_1</label>
    <referenceTo>ssot__Campaign__dlm</referenceTo>
    <relationshipLabel>LeadEngagement_UtmId_map_Campaign_Id_N_1</relationshipLabel>
    <relationshipName>LeadEngagement_UtmId_map_Campaign_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>