force-app/main/default/objects/ssot__LeadEngagement__dlm/fields/ssot__LeadUnconvertReason__c.field-meta.xml
<CustomField>
    <fullName>ssot__LeadUnconvertReason__c</fullName>
    <label>Lead Unconvert Reason</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LeadUnconvertReason</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>