force-app/main/default/objects/ssot__LeadEngagement__dlm/fields/ssot__rel_1732260216113_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1732260216113_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LeadEngagement_DeviceLocaleId_map_Lo_rel</label>
    <referenceTo>ssot__Locale__dlm</referenceTo>
    <relationshipLabel>LeadEngagement_DeviceLocaleId_map_Lo_rel</relationshipLabel>
    <relationshipName>rel_1732260216113_end</relationshipName>
    <type>Lookup</type>
</CustomField>