force-app/main/default/objects/ssot__LeadEngagement__dlm/fields/ssot__rel_1732260243032_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1732260243032_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LeadEngagement_EngagementChannelActi_rel</label>
    <referenceTo>ssot__EngagementChannelAction__dlm</referenceTo>
    <relationshipLabel>LeadEngagement_EngagementChannelActi_rel</relationshipLabel>
    <relationshipName>rel_1732260243032_end</relationshipName>
    <type>Lookup</type>
</CustomField>