force-app/main/default/objects/ssot__LeadEngagement__dlm/fields/ssot__rel_1732260249266_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1732260249266_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LeadEngagement_IndividualId_map_Indi_rel</label>
    <referenceTo>ssot__Individual__dlm</referenceTo>
    <relationshipLabel>LeadEngagement_IndividualId_map_Indi_rel</relationshipLabel>
    <relationshipName>rel_1732260249266_end</relationshipName>
    <type>Lookup</type>
</CustomField>